refactoring compilation